# courses_online

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/blog/: admin.py  models.py  serializers.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_alter_post_excerpt.py
apps/contact/: admin.py  models.py  serializer.py  urls.py  views.py
apps/contact/migrations/: 0001_initial.py
apps/core/: serializer.py  urls.py  views.py
apps/courses/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_lesson_enrollment.py  0003_rename_is_activate_enrollment_is_active.py  0004_course_avg_rating_course_reviews_count_courreview.py  0005_rename_courreview_coursreview.py  0006_alter_coursreview_options.py  0007_rename_coursreview_coursereview.py  0008_alter_enrollment_is_active.py
apps/payments/: admin.py  models.py  serializer.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py
apps/users/: models.py  serializers.py  urls.py  utils.py  views.py  views_webhook.py
apps/users/migrations/: 0001_initial.py  0002_passwordreset.py  0003_remove_passwordreset_token_passwordreset_code_and_more.py  0004_passwordresetcode.py  0005_telegramchat.py  0006_remove_telegramchat_user_telegramchat_first_name_and_more.py  0007_telegramchat_temp_email_telegramchat_temp_token_and_more.py  0008_loginotp.py  (+3 more)
config/: settings.py  urls.py
courses_online/: bruno.json  login.bru  logout.bru  me.bru  register.bru
telegram_bot/: bot.py
(+6 files in other folders)
