[project]
name = "courses-online"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.23.0",
    "aiohttp==3.9.1",
    "django>=5.2.9",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=23.0.0",
    "httpx>=0.25.2",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "python-dotenv==1.0.0",
    "python-telegram-bot==20.7",
    "requests>=2.32.5",
]
